package={name= 'kms', version= '0.0.0', edition= '2021'}
bin=[{name='kms',path= 'main.rs'}]

[dependencies]
bytemuck='*'
drm='*'
ffmpeg ={package='ffmpeg-sys-next', version='*'}
va={package='libva-sys',version='*'}

[dependencies]
itertools='*'
num-derive='*'
num-traits='*'
bytemuck='*'
nom='*'
rustix='*'
memmap={version='*', package='memmapix'}
matroska={version='*', git='https://github.com/rust-av/matroska'}
nix='*'
drm='*'
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={git='https://github.com/Matthias-Fauconneau/image'}
ui={git='https://github.com/Matthias-Fauconneau/ui'}
