package={name= 'kms', version= '0.0.0', edition= '2021'}
bin=[{name='kms',path= 'main.rs'}]

[build-dependencies]
bindgen='*'
cc={version='*', features=['parallel']}

[dependencies]
itertools='*'
num-derive='*'
num-traits='*'
bytemuck='*'
nom='*'
rustix='*'
memmap={version='*', package='memmapix'}
matroska={version='*', git='https://github.com/rust-av/matroska'}
drm-fourcc='*'
drm='*'
libc='*'
