package={name= 'kms', version= '0.0.0', edition= '2021'}
bin=[{name='kms',path= 'main.rs'}]

[build-dependencies]
bindgen='*'
cc={version='*', features=['parallel']}

[dependencies]
#internal-iterator='*'
itertools='*'
num-derive='*'
num-traits='*'
bytemuck='*'
nom='*'
rustix='*'
memmap={version='*', package='memmapix'}
matroska={version='*', git='https://github.com/rust-av/matroska'}
drm-fourcc='*'
drm='*'
libc='*'
nix='*'
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={git='https://github.com/Matthias-Fauconneau/image'}
ui={git='https://github.com/Matthias-Fauconneau/ui'}

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}